#4247 輸入框移除之前輸入

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
@@ -31,7 +31,7 @@
                     <div class="o-actionbox o-actionbox--full" data-clear="true">
                         <!-- #keyword: 請見頁面下方的script邏輯，套用jquery.autocomplete套件 -->
                         <!-- [data-clear="textbox"]: 套用清除按鈕功能，標示此為文字輸入框 -->
-                        <input insertKeywords issearchbar="true" eh-search-pageid="@Sitecore.Context.Item.ID.Guid" id="keyword" type="search" class="o-actionbox__input o-actionbox__input--shadow" data-clear="textbox" placeholder="請輸入代碼或名稱">
+                        <input insertKeywords issearchbar="true" eh-search-pageid="@Sitecore.Context.Item.ID.Guid" id="keyword" type="search" class="o-actionbox__input o-actionbox__input--shadow" data-clear="textbox" placeholder="請輸入代碼或名稱" autocomplete="off">
                         <button type="submit" class="o-actionbox__btn o-actionbox__btn--magnifier"></button>
                         <!-- [data-clear="button"]: 套用清除按鈕功能，標示此為清除按鈕 -->
                         <button type="button" class="o-actionbox__clear" data-clear="button">清除</button>
