Update : 調整市場新聞列表點擊焦點新聞排序按鈕的排序邏輯

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
@@ -378,7 +378,7 @@
                             <td class="c-cardTable__space"></td>
                             <td class="c-cardTable__body " data-card-table-width="1/1">
                                 <div class="c-cardTable__content">
-                                    <span class="o-iconText o-iconText--focus t-focus <%= HotNews %>" data-after-lt="焦點新聞"></span>
+                                    <span class="o-iconText o-iconText--focus t-focus <%= DisplayHotNews %>" data-after-lt="焦點新聞"></span>
                                 </div>
                             </td>
                             <td class="c-cardTable__body" data-card-table-width="1/1">
