修改重複命名

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
@@ -5,9 +5,9 @@
 @if (Model == null)
 {
     @* 第三方登入隱藏tab *@
-    <div class="c-section" data-exclusive></div>
+    <div class="c-section" data-consultlist></div>
     <script>
-        let panelId = $('[data-exclusive]').parent().attr('data-tab-panel-id');
+        let panelId = $('[data-consultlist]').parent().attr('data-tab-panel-id');
         $('.c-tab__navs').find('[data-tab-target=' + panelId + ']').parent().remove();
     </script>
 }
